--- a/src/app/app/basic-call-procedure/components/sales-order-payment.component.html
+++ b/src/app/app/basic-call-procedure/components/sales-order-payment.component.html
@@ -1,5 +1,5 @@
 <div class="container-body">
-    <div class="item-container sub fixed">
+    <div class="item-container sub">
         <div class='container'>
             <div class='cell'>
                 <div class='container'><div class='cell width-100 padding-left-5 large green'>Rose Cell</div></div>
@@ -9,7 +9,7 @@
             </div>
         </div>
     </div>
-    <div class="item-container margin-top-13">
+    <div class="item-container">
         <div class="container">
 	        <div class='cell'>
                 <div class='container'><div class='cell width-50 padding-left-5 green'>Order No. 12345678</div></div>
@@ -38,10 +38,10 @@
     <div class="item-container">
         <div class="container">
 	        <div class='cell'>
-                <div class='container'><div class='cell width-50 padding-left-5'>SUN</div></div>
+                <div class='container'><div class='cell width-50 padding-left-5'>SMART</div></div>
 	        </div>
 	        <div class='cell'>
-                <div class='container'><div class='cell width-50 padding-left-5'>99999000003</div></div>
+                <div class='container'><div class='cell width-50 padding-right-5 align-right'>99999000003</div></div>
 	        </div>
 	    </div>
     </div>
@@ -66,10 +66,10 @@
     <div class="item-container">
         <div class="container">
 	        <div class='cell'>
-                <div class='container'><div class='cell width-50 padding-left-5'>SMART</div></div>
+                <div class='container'><div class='cell width-50 padding-left-5'>SUN</div></div>
 	        </div>
 	        <div class='cell'>
-                <div class='container'><div class='cell width-50 padding-left-5'>99999000003</div></div>
+                <div class='container'><div class='cell width-50 padding-right-5 align-right'>99999000003</div></div>
 	        </div>
 	    </div>
     </div>
@@ -184,7 +184,7 @@
 	</div>
 
     <div class="no-divider">
-        <div class= "button" (click)="gotoBCPActivityStep()">
+        <div class= "button" (click)="gotoUnservedOrder()">
             <div class="button-identifier">DONE</div>
         </div>      
     </div>
