--- a/src/app/app/basic-call-procedure/components/bcp-offers.component.html
+++ b/src/app/app/basic-call-procedure/components/bcp-offers.component.html
@@ -1,3 +1,21 @@
+<div class="container-body">
+    <div class="item-container">
+        <div class="bcp-step-container">
+            <div class="step-field">
+                <div class="step-field-item"><div class="step-circle">1</div></div>
+                <div class="step-field-item">-</div>
+                <div class="step-field-item"><div class="step-circle">2</div></div>
+                <div class="step-field-item">-</div>
+                <div class="step-field-item"><div class="step-circle vivid-pink">3</div></div>
+                <div class="step-field-item">-</div>
+                <div class="step-field-item"><div class="step-circle">4</div></div>
+                <div class="step-field-item">-</div>
+                <div class="step-field-item"><div class="step-circle">5</div></div>
+            </div>
+        </div>
+    </div>
+</div>
+
 <div class="container-body-offers">
     <div class="cover">
         <div class="pic">
@@ -9,8 +27,8 @@
     </div>
 	
 	<div class="no-divider">
-		<div class= "button" (click)="gotoBCPActivityStep()">
-			<div class="button-identifier" id="skip-collection">NEXT</div>
+		<div class= "button" (click)="gotoRetailerSalesOrder()">
+			<div class="button-identifier" id="next-collection">NEXT</div>
 		</div>
 	</div>
 </div>
