--- a/src/app/app/basic-call-procedure/components/hc-basic-call-procedure.component.html
+++ b/src/app/app/basic-call-procedure/components/hc-basic-call-procedure.component.html
@@ -8,27 +8,19 @@
 </div>
 
 <div class="container-body">
-    <div class="item-container">
-        <div class="container">
-            <div class='cell'>
-                <div class='container'><div class='cell width-100 padding-left-5 large bold'>Today's Route</div></div>
-            </div>
-        </div>
-    </div>
     <!-- <div class="item-container" (click)="gotoCallPreparationHC({status: 'In Progress'})"> -->
     <div class="item-container" (click)="gotoAnotherPage()">
         <div class="container">
+            <div class='cell width-10 padding-left-5'><div class="sequence green">1</div></div>
             <div class='cell'>
-                <div class='container'><div class='cell width-45 padding-left-5'>Rose Cell</div></div>
-                <div class='container'><div class='cell width-45 padding-left-5 italic'>99999900003</div></div>
-                <div class='container'><div class='cell width-45 padding-left-5 grey'>Amount payable (5)</div></div>
-                <div class='container'><div class='cell width-45 padding-left-5 grey'>Status</div></div>
+                <div class='container'><div class='cell width-40 padding-left-5'>Rose Cell</div></div>
+                <div class='container'><div class='cell width-40 padding-left-5 italic'>99999900003</div></div>
+                <div class='container'><div class='cell width-40 padding-left-5'>Amount payable (5/8)</div></div>
             </div>
             <div class='cell'>
-                <div class='container'><div class='cell width-45 align-right green'>Route #2</div></div>
-                <div class='container'><div class='cell width-45 align-right'></div></div>
-                <div class='container'><div class='cell width-45 align-right'>3,000.00 ₱</div></div>
-                <div class='container'><div class='cell width-45 align-right bold dark-sea-green'>In Progress</div></div>
+                <div class='container'><div class='cell width-40 align-right bold'>In Progress</div></div>
+                <div class='container'><div class='cell width-40 align-right'></div></div>
+                <div class='container'><div class='cell width-40 align-right'>3,000.00 ₱</div></div>
             </div>
             <div class='cell width-10 arrow-right'></div>
         </div>
@@ -36,17 +28,16 @@
     <!-- <div class="item-container" (click)="gotoCallPreparationHC({status: 'Not Visited'})"> -->
     <div class="item-container" (click)="gotoAnotherPage()">
         <div class="container">
+            <div class='cell width-10 padding-left-5'><div class="sequence green">2</div></div>
             <div class='cell'>
-                <div class='container'><div class='cell width-45 padding-left-5'>Bird Cell</div></div>
-                <div class='container'><div class='cell width-45 padding-left-5 italic'>99999900002</div></div>
-                <div class='container'><div class='cell width-45 padding-left-5 grey'>Amount payable (2)</div></div>
-                <div class='container'><div class='cell width-45 padding-left-5 grey'>Status</div></div>
+                <div class='container'><div class='cell width-40 padding-left-5'>Bird Cell</div></div>
+                <div class='container'><div class='cell width-40 padding-left-5 italic'>99999900003</div></div>
+                <div class='container'><div class='cell width-40 padding-left-5'>Amount payable (1/3)</div></div>
             </div>
             <div class='cell'>
-                <div class='container'><div class='cell width-45 align-right green'>Route #3</div></div>
-                <div class='container'><div class='cell width-45 align-right'></div></div>
-                <div class='container'><div class='cell width-45 align-right'>8,000.00 ₱</div></div>
-                <div class='container'><div class='cell width-45 align-right bold vivid-pink'>Not Visited</div></div>
+                <div class='container'><div class='cell width-40 align-right bold'>Not Visited</div></div>
+                <div class='container'><div class='cell width-40 align-right'></div></div>
+                <div class='container'><div class='cell width-40 align-right'>3,000.00 ₱</div></div>
             </div>
             <div class='cell width-10 arrow-right'></div>
         </div>
@@ -54,17 +45,16 @@
     <!-- <div class="item-container" (click)="gotoCallPreparationHC({status: 'Visited'})"> -->
     <div class="item-container" (click)="gotoAnotherPage()">
         <div class="container">
+            <div class='cell width-10 padding-left-5'><div class="sequence vivid-pink">3</div></div>
             <div class='cell'>
-                <div class='container'><div class='cell width-45 padding-left-5'>Gloria Cell</div></div>
-                <div class='container'><div class='cell width-45 padding-left-5 italic'>99999900001</div></div>
-                <div class='container'><div class='cell width-45 padding-left-5 grey'>Amount payable</div></div>
-                <div class='container'><div class='cell width-45 padding-left-5 grey'>Status</div></div>
+                <div class='container'><div class='cell width-40 padding-left-5'>Rose Cell</div></div>
+                <div class='container'><div class='cell width-40 padding-left-5 italic'>99999900003</div></div>
+                <div class='container'><div class='cell width-40 padding-left-5'>Amount payable (1/5)</div></div>
             </div>
             <div class='cell'>
-                <div class='container'><div class='cell width-45 align-right green'>Route #1</div></div>
-                <div class='container'><div class='cell width-45 align-right'></div></div>
-                <div class='container'><div class='cell width-45 align-right'>5,000.00 ₱</div></div>
-                <div class='container'><div class='cell width-45 align-right bold green'>Visited</div></div>
+                <div class='container'><div class='cell width-40 align-right bold'>Not Visited</div></div>
+                <div class='container'><div class='cell width-40 align-right'></div></div>
+                <div class='container'><div class='cell width-40 align-right'>3,000.00 ₱</div></div>
             </div>
             <div class='cell width-10 arrow-right'></div>
         </div>
