--- a/src/app/app/basic-call-procedure/components/hc-bcp-collection.component.html
+++ b/src/app/app/basic-call-procedure/components/hc-bcp-collection.component.html
@@ -1,18 +1,28 @@
 <div class="container-body">
-
-	<div class="item-container">
-        <div class="container">
-            <div class="cell">
-                <div class="container">
-                	<div class="cell width-100 large padding-left-5" id="retailer-name">Gloria Cell</div>
-                </div>                
+    <div class="item-container sub">
+        <div class='container'>
+            <div class='cell'>
+                <div class='container'><div class='cell width-100 padding-left-5 large green'>Rose Cell</div></div>
+            </div>
+            <div class='cell'>
+                <div class='container'><div class='cell width-50 italic green'>(99999900003)</div></div>
             </div>
         </div>
-        <div class="container">
-            <div class="cell">
-                <div class="container">
-                	<div class="cell width-100 italic padding-left-5 grey" id="retailer-id">99999900003</div>
-                </div>
+    </div>
+
+
+    <div class="item-container">
+        <div class="bcp-step-container">
+            <div class="step-field">
+                <div class="step-field-item"><div class="step-circle">1</div></div>
+                <div class="step-field-item">-</div>
+                <div class="step-field-item"><div class="step-circle vivid-pink">2</div></div>
+                <div class="step-field-item">-</div>
+                <div class="step-field-item"><div class="step-circle">3</div></div>
+                <div class="step-field-item">-</div>
+                <div class="step-field-item"><div class="step-circle">4</div></div>
+                <div class="step-field-item">-</div>
+                <div class="step-field-item"><div class="step-circle">5</div></div>
             </div>
         </div>
     </div>
@@ -21,10 +31,10 @@
 	<div class="item-container" (click)='outstandingShow()' id="outstanding-show-btn">
         <div class="container">
             <div class="cell">
-                <div class="container"><div class="cell width-45 padding-left-5">Outstanding</div></div>
+                <div class="container"><div class="cell width-45 padding-left-5">Amount Receivables</div></div>
             </div>
             <div class="cell">
-                <div class="container"><div class="cell width-45 align-right">3000 ₱</div></div>
+                <div class="container"><div class="cell width-45 align-right green">3000 ₱</div></div>
             </div>
             <div class="cell width-10 arrow-down" id="arrow-outstanding" [ngClass]='{selected: vOutstandingShow}'></div>
         </div>
@@ -92,28 +102,24 @@
         <div class="container">
             <div class="cell">
                 <div class="container"><div class="cell width-45 padding-left-5 grey">Amount</div></div>
+                <div class="container"><div class="cell width-45 padding-left-5 padding-right-5"><input class="width-100" type ="text" id ="collection-amount" placeholder="PHP"/></div></div>
             </div>
         </div>
         <div class="container">
-    		<input  type ="text" class ="input-90" id ="collection-amount" placeholder="PHP"/>	
-        </div>
-        <div class="container">
-            <div class="cell">
-                <div class="container"><div class="cell width-45 padding-left-5 grey">Remarks</div></div>
+            <div class='cell'>
+                <div class='container'><div class='cell width-100 padding-left-5'>Remarks</div></div>
+                <div class='container'><div class='cell width-100 padding-left-5 padding-right-5'><textarea name="textarea" rows="10" cols="50"></textarea></div></div>
             </div>
-        </div>
-        <div class="container">
-    		<textarea rows="4" cols="50" class="text-90" id="colllection-remarks"></textarea>	
         </div>
         <div class="container">
         	<div class="double-divider">
-        		<div class= "button" (click)="gotoBCPActivityStep()">
-        			<div class="button-identifier" id="skip-collection">Skip</div>
+        		<div class= "button" (click)="gotoSkipCollection()">
+        			<div class="button-identifier" id="skip-collection">SKIP</div>
         		</div>
         	</div>
         	<div class="double-divider">
-        		<div class= "button" (click)="gotoBCPActivityStep()">
-        			<div class="button-identifier" id="next-collection">Next</div>
+        		<div class= "button" (click)="gotoConfirmCollection()">
+        			<div class="button-identifier" id="next-collection">APPLY</div>
         		</div>
         	</div>
         </div>
