--- a/src/app/scss/app.scss
+++ b/src/app/scss/app.scss
@@ -13,22 +13,22 @@
 @import "mpin";
 
 // @import "targets-actuals";
-@import "inventory";
+// @import "inventory";
 // @import "retailer-route";
-@import "accounts-receivables";
+// @import "accounts-receivables";
 // @import "dsp-alerts";
-@import "reset-password";
+// @import "reset-password";
 
 @import "modal-box";
 @import "modal-verification-code";
 
-@import "basic-call-procedure";
-@import "detail-retailer";
+// @import "basic-call-procedure";
+// @import "detail-retailer";
 @import "bcp-collection";
-@import "sales-order-payment";
+// @import "sales-order-payment";
 @import "visited-retailer";
 @import "splash";
 @import "left-menu";
 @import "stock-return";
-@import "bcp-activity-step";
+// @import "bcp-activity-step";
 @import "offers";
