--- a/src/app/app/remittance/components/remittance.component.html
+++ b/src/app/app/remittance/components/remittance.component.html
@@ -1,33 +1,52 @@
 <div class="container-body">
-    <div class="item-container">
+    <div class="item-container sub">
         <div class='container'>
             <div class='cell'>
-                <div class='container'><div class='cell bold width-50 padding-left-5 large'>Total Receivables :</div></div>
+                <div class='container'><div class='cell width-50 padding-left-5 large grey'>Total Remittance</div></div>
+                <div class='container'><div class='cell width-50 padding-left-5 large grey'>Confirmed</div></div>
+                <div class='container'><div class='cell width-50 padding-left-5 large grey'>Unconfirmed</div></div>
             </div>
             <div class='cell'>
-                <div class='container'><div class='cell bold width-50 padding-right-5 align-right large'>11,400.00 ₱</div></div>
+                <div class='container'><div class='cell width-50 padding-right-5 align-right large green'>30,000.00 ₱</div></div>
+                <div class='container'><div class='cell width-50 padding-right-5 align-right large green'>10,000.00 ₱</div></div>
+                <div class='container'><div class='cell width-50 padding-right-5 align-right large green'>20,000.00 ₱</div></div>
+            </div>
+        </div>
+    </div>
+    <div class="item-container">
+        <div class="container">
+            <div class="double-divider">
+                <div class= "button" id="btn-confirm">
+                    <div class="button-identifier">CONFIRM</div>
+                </div>      
+            </div>
+            <div class="double-divider">
+                <div class= "button" id="btn-add-remittance">
+                    <div class="button-identifier">ADD REMITTANCE</div>
+                </div>      
             </div>
         </div>
     </div>
     <div class="item-container">
         <div class="container">
             <div class='cell'>
+                <div class='container'><div class='cell width-100 padding-left-5'>RemitBD1356</div></div>
                 <div class='container'>
                     <div class='cell'>
                         <div class="container">
                             <div class='cell'>
-                                <div class='container'><div class='cell width-50 padding-left-5'>RemitBD1356</div></div>
+                                <div class='container'><div class='cell width-50 padding-left-5 green'>Bank Deposit</div></div>
+                                <div class='container'><div class='cell width-50 padding-left-5 grey'>Bank BCA / Cibinong</div></div>
                             </div>
                             <div class='cell'>
-                                <div class='container'><div class='cell width-50 padding-right-5 align-right'>9,000.00 ₱</div></div>
+                                <div class='container'><div class='cell width-50 padding-right-5 align-right large green'>Confirmed</div></div>
+                                <div class='container'><div class='cell width-50 padding-right-5 align-right'>10,000.00 ₱</div></div>
                             </div>
                         </div>
                     </div>
                 </div>
-                <div class='container'><div class='cell width-100 padding-left-5 green'>Bank Deposit</div></div>
-                <div class='container'><div class='cell width-100 padding-left-5 grey'>Bank BCA / Cibinong</div></div>
                 <div class='container'><div class='cell width-100 padding-left-5 grey'>110.220.330.440</div></div>
-                <div class='container'><div class='cell width-100 padding-left-5 grey'>17/04/2016</div></div>
+                <div class='container'><div class='cell width-100 padding-left-5 grey'>2016-04-17 14:22</div></div>
             </div>
         </div>
     </div>
@@ -52,10 +71,5 @@
                 <div class='container'><div class='cell width-100 padding-left-5 grey'>05/05/2016</div></div>
             </div>
         </div>
-    </div>
-    <div class="no-divider">
-        <div class= "button" >
-            <div class="button-identifier">ADD REMITTANCE</div>
-        </div>      
     </div>
 </div>
