--- a/src/app/scss/_global.scss
+++ b/src/app/scss/_global.scss
@@ -384,7 +384,7 @@ LIST VIEW - BUTTON
         margin-top:4%;
         margin-bottom:4%;
         background-color: $apple;
-        border-radius: 2vw;
+        border-radius: 1vw;
 
         &.button-small {
             border-radius: 0vw;
@@ -394,7 +394,7 @@ LIST VIEW - BUTTON
         }
         .button-identifier {
             cursor: pointer;
-            font-size: $button;
+            font-size: 4vw;
             text-align: center;
             width: 100%;
             color: $white;
@@ -630,10 +630,9 @@ LIST VIEW - TEXT
 
 
             
-            &.small { font-size: small; }
-            &.large { font-size: large; }
-            &.x-large { font-size: x-large; }
-            &.xx-large { font-size: xx-large; }
+            &.small { font-size: 3vw; }
+            &.large { font-size: 4.5vw; }
+            &.x-large { font-size: 5vw; }
             
             &.align-center  { text-align: center; }
             &.align-left    { text-align: left; }
