--- a/src/app/app/my-transaction/components/targets-actuals.component.html
+++ b/src/app/app/my-transaction/components/targets-actuals.component.html
@@ -62,7 +62,7 @@
 												                <div class='container'><div class='cell width-33 align-center'>Target</div></div>
 												            </div>
 												            <div class='cell'>
-												                <div class='container'><div class='cell width-33 align-center'>-115</div></div>
+												                <div class='container'><div class='cell width-33 align-center'>{{eachSubCat.balance}}</div></div>
 												                <div class='container'><div class='cell width-33 align-center'>Balance</div></div>
 												            </div>
 												        </div>
@@ -113,7 +113,7 @@
 												                <div class='container'><div class='cell width-33 align-center'>Target</div></div>
 												            </div>
 												            <div class='cell'>
-												                <div class='container'><div class='cell width-33 align-center'>-115</div></div>
+												                <div class='container'><div class='cell width-33 align-center'>{{eachSubCat.balance}}</div></div>
 												                <div class='container'><div class='cell width-33 align-center'>Balance</div></div>
 												            </div>
 												        </div>
@@ -164,7 +164,7 @@
 												                <div class='container'><div class='cell width-33 align-center'>Target</div></div>
 												            </div>
 												            <div class='cell'>
-												                <div class='container'><div class='cell width-33 align-center'>-115</div></div>
+												                <div class='container'><div class='cell width-33 align-center'>{{eachSubCat.balance}}</div></div>
 												                <div class='container'><div class='cell width-33 align-center'>Balance</div></div>
 												            </div>
 												        </div>
