--- a/src/app/app/remittance/components/remittance.component.html
+++ b/src/app/app/remittance/components/remittance.component.html
@@ -15,12 +15,12 @@
     </div>
     <div class="item-container">
         <div class="container">
-            <div class="double-divider">
+            <div class="double-divider" (click)="gotoConfirm()">
                 <div class= "button" id="btn-confirm">
                     <div class="button-identifier">CONFIRM</div>
                 </div>      
             </div>
-            <div class="double-divider">
+            <div class="double-divider"(click)="gotoAdd()">
                 <div class= "button" id="btn-add-remittance">
                     <div class="button-identifier">ADD REMITTANCE</div>
                 </div>      
@@ -45,30 +45,62 @@
                         </div>
                     </div>
                 </div>
-                <div class='container'><div class='cell width-100 padding-left-5 grey'>110.220.330.440</div></div>
-                <div class='container'><div class='cell width-100 padding-left-5 grey'>2016-04-17 14:22</div></div>
-            </div>
-        </div>
-    </div>
-    <div class="item-container">
-        <div class="container">
-            <div class='cell'>
                 <div class='container'>
                     <div class='cell'>
                         <div class="container">
                             <div class='cell'>
-                                <div class='container'><div class='cell width-50 padding-left-5'>RemitBD1390</div></div>
-                            </div>
-                            <div class='cell'>
-                                <div class='container'><div class='cell width-50 padding-right-5 align-right'>2,400.00 ₱</div></div>
+                                <div class='container'><div class='cell width-80 padding-left-5 grey'>110.220.330.440</div></div>
+                                <div class='container'><div class='cell width-80 padding-left-5 grey'>2016-04-17 14:22</div></div>
                             </div>
                         </div>
                     </div>
                 </div>
-                <div class='container'><div class='cell width-100 padding-left-5 green'>Bank Deposit</div></div>
-                <div class='container'><div class='cell width-100 padding-left-5 grey'>Bank BCA / Cibinong</div></div>
-                <div class='container'><div class='cell width-100 padding-left-5 grey'>110.220.330.440</div></div>
-                <div class='container'><div class='cell width-100 padding-left-5 grey'>05/05/2016</div></div>
+                <div class='container'>
+                    <div class='cell'>
+                        <div class="container">
+                            <div class='cell'>
+                                <div class='container'><div class='cell width-50 padding-left-5 grey'>Acknowledge by</div></div>
+                            </div>
+                            <div class='cell'>
+                                <div class='container'><div class='cell width-50 padding-right-5 align-right'>Diana Lo</div></div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <div class="item-container">
+        <div class="container">
+            <div class='cell'>
+                <div class='container'><div class='cell width-100 padding-left-5'>RemitBD1356</div></div>
+                <div class='container'>
+                    <div class='cell'>
+                        <div class="container">
+                            <div class='cell'>
+                                <div class='container'><div class='cell width-50 padding-left-5 green'>Bank Deposit</div></div>
+                                <div class='container'><div class='cell width-50 padding-left-5 grey'>Bank BCA / Cibinong</div></div>
+                            </div>
+                            <div class='cell'>
+                                <div class='container'><div class='cell width-50 padding-right-5 align-right large red'>Unconfirmed</div></div>
+                                <div class='container'><div class='cell width-50 padding-right-5 align-right'>10,000.00 ₱</div></div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class='container'>
+                    <div class='cell'>
+                        <div class="container">
+                            <div class='cell'>
+                                <div class='container'><div class='cell width-80 padding-left-5 grey'>110.220.330.440</div></div>
+                                <div class='container'><div class='cell width-80 padding-left-5 grey'>2016-04-17 14:22</div></div>
+                            </div>
+                            <div class='cell width-10 edit-gray'></div>
+                            <div class='cell width-10 add'></div>
+                        </div>
+                    </div>
+                </div>
             </div>
         </div>
     </div>
