--- a/src/app/scss/_global.scss
+++ b/src/app/scss/_global.scss
@@ -101,6 +101,7 @@ END OF CHECKBOX
 
 // PLEASE PUT WIDTH HERE
 &.width-10 { width: 10%; }
+&.width-15 { width: 15%; }
 &.width-20 { width: 20%; }
 &.width-30 { width: 30%; }
 &.width-33 { width: 33%; }
@@ -616,14 +617,21 @@ LIST VIEW - TEXT
 
             
             // PLEASE PUT STYLE HERE
+            &.padding-left-2 { padding-left: 2vw; }
             &.padding-left-5 { padding-left: 5vw; }
             &.padding-left-10 { padding-left: 10vw; }
+            &.padding-left-20 { padding-left: 20vw; }
+
             &.padding-right-3 { padding-right: 3vw; }
             &.padding-right-5 { padding-right: 5vw; }
-            &.padding-left-2 { padding-left: 2vw; }
+            &.padding-right-20 { padding-right: 20vw; }
 
             &.padding-top-1 { padding-top: 1vw; }
+            &.padding-top-2 { padding-top: 2vw; }
+            &.padding-top-5 { padding-top: 5vw; }
+            
             &.padding-bottom-1 { padding-bottom: 1vw; }
+            &.padding-bottom-2 { padding-bottom: 2vw; }
 
             .margin-right-7 { margin-right: 7vw; }
 
