--- a/src/app/scss/app.scss
+++ b/src/app/scss/app.scss
@@ -26,7 +26,7 @@
 // @import "detail-retailer";
 @import "bcp-collection";
 // @import "sales-order-payment";
-@import "visited-retailer";
+//@import "visited-retailer";
 @import "splash";
 @import "left-menu";
 @import "stock-return";
