add stock return

--- a/src/app/app/stock-return/components/confirm-stock-return.component.html
+++ b/src/app/app/stock-return/components/confirm-stock-return.component.html
@@ -1,22 +1,4 @@
 <div class="container-body">
-	<div class="item-container">
-		<div class="container">
-			<div class='cell'>
-				<div class="no-divider">
-					<div class="button">
-						<div class="button-identifier" (click)="goToAddStockReturn()">ADD STOCK RETURN</div>
-					</div>
-				</div>
-			</div>
-		</div>
-	</div>
-	<div class="item-container">
-		<div class="container">
-			<div class='cell'>
-       			 <div class='container'><div class='cell width-50 padding-left-5'>Summary</div></div>
-    		</div>
-    	</div>
-    </div>
     <div class="item-container">
         <div class='container'>
             <div class='cell'>
@@ -67,4 +49,52 @@
             </div>
         </div>
     </div>
+</div>
+
+<div class="container-body">
+	<div class="item-container">
+		<div class="container">
+            <div class='cell'>
+	                <div class='container'>
+	            		<div class='cell'>
+	               			 <div class='container'><div class='cell width-100 padding-left-5'>Remarks</div></div>
+	            		</div>
+	            		<div class='cell'>
+	                		<div class='container'><div class='cell width-02 vivid-pink bold'>*</div></div>
+	            		</div>
+	        		</div>
+	        		<div class='container'>
+	        			<div class='cell width-100 padding-left-5 padding-right-5'>
+	        				<textarea name="textarea" rows="10" cols="50"></textarea>
+	        			</div>
+	        		</div>
+	        		<div class='container'>
+	            		<div class='cell'>
+	               			 <div class='container'><div class='cell width-100 padding-left-5'>Acknowledgment</div><div>
+	            		</div>
+	            		<div class='cell'>
+	                		<div class='container'><div class='cell width-02 vivid-pink bold'>*</div></div>
+	            		</div>
+	        		</div>
+	        		<div class='container'>
+	        			<div class='cell width-100 padding-left-5 padding-right-5'>
+	        				<textarea name="textarea" placeholder="Distributor Name"></textarea>
+	        			</div>
+	        		</div>
+                	<div class='container'>
+                		<div class='cell width-100 padding-left-5 padding-right-5'>
+                			<textarea name="textarea" placeholder="Distributor Password" type="password"></textarea>
+                		</div>
+                	</div>
+
+            </div>
+        </div>
+	</div>
+
+	<div class="no-divider">
+		<div class="button">
+			<a (click)="confirm($event)" id="confirm-link"><div class="button-identifier">CONFIRM</div></a>
+		</div>
+	</div>
+
 </div>
