--- a/src/app/app/stock-return/components/add-stock-return.component.html
+++ b/src/app/app/stock-return/components/add-stock-return.component.html
@@ -1,22 +1,6 @@
+
+
 <div class="container-body">
-	<div class="item-container">
-		<div class="container">
-			<div class='cell'>
-				<div class="no-divider">
-					<div class="button">
-						<div class="button-identifier" (click)="goToAddStockReturn()">ADD STOCK RETURN</div>
-					</div>
-				</div>
-			</div>
-		</div>
-	</div>
-	<div class="item-container">
-		<div class="container">
-			<div class='cell'>
-       			 <div class='container'><div class='cell width-50 padding-left-5'>Summary</div></div>
-    		</div>
-    	</div>
-    </div>
     <div class="item-container">
         <div class='container'>
             <div class='cell'>
@@ -32,7 +16,7 @@
 		                            </div>
 		                            <div class='cell'>
 		                                <div class='container'><div class='cell width-50 padding-right-5 align-right'>1,300</div></div>
-		                                <div class='container'><div class='cell width-50 padding-right-5 align-right'>1,300</div></div>
+		                                <div class='container'><div class='cell width-50 padding-right-5 align-right'><input class="width-30" id="amount" type="number" pattern="[0-9]+([,\.][0-9]+)?"/></div></div>
 		                            </div>
 		                        </div>
 		                    </div>
@@ -57,7 +41,7 @@
 		                            </div>
 		                            <div class='cell'>
 		                                <div class='container'><div class='cell width-50 padding-right-5 align-right'>900</div></div>
-		                                <div class='container'><div class='cell width-50 padding-right-5 align-right'>900</div></div>
+		                                <div class='container'><div class='cell width-50 padding-right-5 align-right'><input class="width-30" id="amount" type="number" pattern="[0-9]+([,\.][0-9]+)?"/></div></div>
 		                            </div>
 		                        </div>
 		                    </div>
@@ -67,4 +51,13 @@
             </div>
         </div>
     </div>
+</div>
+
+<div class="container-body">
+	<div class="no-divider">
+		<div class="button">
+			<!-- <a (click)="save($event)" id="save-link"><div class="button-identifier">SAVE</div></a> -->
+			<div class="button-identifier" (click)="goToConfirmStockReturn()">SAVE</div>
+		</div>
+	</div>
 </div>
